--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,7 @@ custom:
       - dev
     start:
       port: 8000
+      inMemory: true
       migrate: true
       seed: true
       convertEmptyValues: true
